<resources>
    <string name="app_name">CurrencyMate</string>
    <string name="select_base_currency">Wybierz walutę bazową</string>
    <string name="select_target_currency">Wybierz walutę docelową</string>
    <string name="enter_amount">Wpisz kwotę</string>
    <string name="convert">Przelicz</string>
    <string name="result_placeholder">Wynik pojawi się tutaj</string>
    <string name="distance_placeholder">Distance will be displayed here</string>


    <string-array name="currency_list">
        <item>USD</item>
        <item>EUR</item>
        <item>PLN</item>
        <item>GBP</item>
        <item>CHF</item>
    </string-array>
</resources>
